fix ice cream scoop & text alignment

--- a/style.css
+++ b/style.css
@@ -57,89 +57,11 @@ span.alamode {
     text-align: center;
     font-size: 20px;
     font-family: Georgia, serif;
-}    
-
-#cone {    
-    margin-top: -20px;
-    height: 0px;
-    width: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    border-right: 75px solid transparent;
-    border-left: 75px solid transparent;
-    border-top: 250px solid #C68F47;
-    z-index: 1;
-  }
-
-#cone p {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -100px;
-    max-width: 200px;
-    /*margin-top: auto;
-    margin-bottom: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    line-height: 1.5;
-    display: inline-block;
-    vertical-align: middle;
-    padding: -700px 0;
-    border: 3px solid black;*/
-}  
-
-
-#scoop1 {
-    margin-top: -60px;
-    text-align: center;
-    background-color: brown;
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    position: relative;
+    line-height: 1.25;
 }
-
-#scoop1::after {
-    content: '';
-    position: absolute;
-    bottom: 0px;
-    left: 10px;
-    height: 40px;
-    background: brown;
-    width: 180px;
-    border-radius: 100%;
-    z-index: 2;
-  }
-
-#scoop2 {
-    margin-top: -60px;
-    text-align: center;
-    background-color: pink;
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    position: relative;
-}
-
-#scoop2::after {
-    content: '';
-    position: absolute;
-    bottom: 0px;
-    left: 10px;
-    height: 40px;
-    background: pink;
-    width: 180px;
-    border-radius: 100%;
-    z-index: 2;
-  }
 
 #scoop3 {
-    text-align: center;
+    margin-top: 25px;
     background-color: lightyellow;
     margin-left: auto;
     margin-right: auto;
@@ -147,6 +69,9 @@ span.alamode {
     height: 200px;
     border-radius: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #scoop3::after {
@@ -159,4 +84,83 @@ span.alamode {
     width: 180px;
     border-radius: 100%;
     z-index: 2;
+}
+
+#scoop2 {
+    margin-top: -40px;
+    text-align: center;
+    background-color: pink;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#scoop2::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 10px;
+    height: 40px;
+    background: pink;
+    width: 180px;
+    border-radius: 100%;
+    z-index: 2;
+}
+
+#scoop1 {
+    margin-top: -40px;
+    text-align: center;
+    background-color: brown;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#scoop1::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 10px;
+    height: 40px;
+    background: brown;
+    width: 180px;
+    border-radius: 100%;
+    z-index: 2;
+}
+
+#cone {    
+    text-align: center;
+    margin-top: -20px;
+    height: 0px;
+    width: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    border-right: 75px solid transparent;
+    border-left: 75px solid transparent;
+    border-top: 250px solid #C68F47;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
   }
+
+#cone p {
+    margin-top: -175px;
+}  
+
+
+
+
+
+
